k8s/apps/opentelemetry-collectors/vyos/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vyos-collector-ingress
  namespace: opentelemetry-collector
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.1/32
      ports:
        - port: 5514
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-collector
      app.kubernetes.io/instance: opentelemetry-collector.vyos
  policyTypes:
    - Ingress
